<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hooli Chat</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="homefrag_tv_welcome">WELCOME</string>
    <string name="connectionsfragment_tv_defaultmessage">No messages</string>
    <string name="messageslist_et_prompt">Type a message!</string>
    <string name="connectionslist_button_remove">Remove</string>
    <string name="button_connectionsfragment_add">Search For User</string>
    <string name="button_connectionsfragment_requests">Connection Requests</string>

    <!-- LogInFragment strings -->
    <string name="loginfragment_login" tools:ignore="ExtraTranslation">LOG IN</string>
    <string name="loginfragment_register">REGISTER</string>
    <string name="loginfragment_email">Email</string>
    <string name="loginfragment_password">Password</string>
    <string name="loginfragment_trouble">Trouble logging in?</string>

    <!-- RegisterFragment strings -->
    <string name="registerfragment_instruction">Please enter your information:</string>
    <string name="registerfragment_email">Email</string>
    <string name="registerfragment_username">Username</string>
    <string name="registerfragment_password">Password</string>
    <string name="registerfragment_firstname">First Name</string>
    <string name="registerfragment_lastname">Last Name</string>
    <string name="registerfragment_register">Register</string>

    <!-- LogInHelpFragment strings -->
    <string name="loginhelp_instruction">Please enter your email address:</string>
    <string name="loginhelp_username_or_email">Email</string>
    <string name="loginhelp_submit">SUBMIT</string>
    <string name="loginhelp_cancel">CANCEL</string>

    <!-- PasswordResetFragment strings -->
    <string name="passwordresetfragment_email">Email</string>
    <string name="passwordresetfragment_code">Code</string>
    <string name="passwordresetfragment_password">New Password</string>
    <string name="passwordresetfragment_password_verify">Verify New Password</string>
    <string name="passwordresetfragment_cancel">CANCEL</string>
    <string name="passwordresetfragment_submit">SUBMIT</string>

    <string name="tab_home">Home</string>
    <string name="tab_chat">Chat</string>
    <string name="tab_contacts">Contacts</string>
    <string name="tab_notifications">Notifications</string>
    <string name="tab_settings">Settings</string>

    <string name="action_logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connectionsearch_request">Add</string>
    <string name="connectionsearch_searchprompt">Search by email or username:</string>
    <string name="connectionrequest_accept">Accept</string>
    <string name="connectionrequest_reject">Reject</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="connectionsearch_search">Search</string>
    <string name="connectionrequest_none">No pending requests.</string>
    <string name="button_connectionfragment_startchat">Open Chat</string>

    <string name="newchat_tv_createchat">Create Chat</string>
    <string name="title_activity_weather_seatting_maps">Map</string>

    <string name="pendingconnection_pending">Request Pending...</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="newchat_prompt">Select users to start a new chat with</string>

    <string name="search_by_city">"Search by city..."</string>
    <string name="color_apply">apply</string>
    <string name="chatroom_delete">Delete</string>


    <string-array name="theme_colors_array">
        <item>Primary Color</item>
        <item>Secondary Color</item>
        <item>Primary Text Color</item>
        <item>Secondary Text Color</item>
        <item>Background Color</item>
    </string-array>


</resources>
