<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_connections"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/tab_contacts" />

    <item
        android:id="@+id/nav_solo_chat"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/tab_chat" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/tab_settings" />

</menu>
